# service-mesh-graphql-auth

./: Cargo.toml  README.md  docker-compose.yml
envoy-proxy/: Dockerfile  envoy.yaml
node-service/: Dockerfile  app.js  package-lock.json  package.json
src/: graphql_authorizer.rs  lib.rs
