[package]
name = "wasm-istio-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasmistioplugin"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.2.0"
log = "0.4.17"
apollo-parser = "0.2.8"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
